--- a/index.html.html
+++ b/index.html.html
@@ -1,33 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+	<meta charset="UTF-8">Submit</button>
 	<title>Personal Online CV</title>
 	<style>
-	body {
-		font-family: Times New Roman, sans-serif;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		background-color: #f9f9f9;
-		margin: 0;
-		padding: 20px;
-		}
-	section {
-		background: white;
-		padding: 40px;
-		border-radius: 10px;
-		box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-		max-width: 700px;
-		width: 100%;
-		box-sizing: border-box;
-		}
+	
+	
 
 	.profile-2x2 {
 		width: 200px; 
 		height: 200px;
 		object-fit: cover; 
-		display: block;
 		margin: 0 auto 20px auto;
 		border: 3px solid #505050;
 		border-radius: 15px;
@@ -39,7 +22,7 @@
 		margin-top: 15px;
 		}
 	th, td {
-		border: 1px solid #505050;
+		border: 2px solid #505050;
 		padding: 10px;
 		text-align: center;
 		}
@@ -60,15 +43,17 @@
 	
 </head>
 <body>
-	<main></main>
-		<section>
-		<header></header>
-	
+<header></header>
+	<section>
 		<h1> Monsanto, Ivy Q.</h1>
 		<p>IT Student | WEB SYSTEMS AND TECHNOLOGIES</p>
-		<img src="C:\Users\Administrator\module2-html\images\profile.jpg.png" alt="Profile photo" class="profile-2x2">
-		
-			<h1>ABOUT ME</h1>
+	<main></main>
+	<section>
+			<h2>ABOUT ME</h2>
+			<img src="C:\Users\Administrator\module2-html\images\profile.jpg.png" alt="Profile photo" class="profile-2x2">
+	</section>
+	<section>
+			
 			<p>
 			Email:
 			<a href="mailto:monsanto.ivy12@gmail.com">monsanto.ivy12@gmail.com</a><br>
@@ -77,6 +62,7 @@
 			</p>
 			<p> Hello! My name is Ivy, you can call me 'Ivy'. I am 20 years old and I lived in Gango, Libona, Bukidnon. I am currently taking a Bachelor of Science in Information and Technology from University of Science and Technology of Southern Philippines(USTP). 
 			My hobbies include watching movies, kdrama and anime. Thats all!!</p>
+			
 			
 			<h1>SKILLS</h1>
 			<ul>
@@ -97,13 +83,14 @@
 					</ul>
 				
 			</ul>
-			<h1>EDUCATION</h1>
-			<table border="1">
+	</section>		
+			<h2>EDUCATION</h2>
+			<table>
 			<tr>
 				<th>PROGRAM</th>
 				<th>INSTITUTION</th>
 				<th>YEAR GRADUATED</th>
-			<tr>
+			</tr>
 			<tr>
 				<td>TVL-ICT</td>
 				<td>Indahag National High School</td>
@@ -116,7 +103,8 @@
 				<td>2028</td>
 			</tr>
 			</table>
-			<h1> CONTACT ME</h1>
+	<section>
+			<h2> CONTACT ME</h2>
 			<form>
 			<input type="text" placeholder="Name"><br><br>
 			<input type="email" placeholder="Email"><br><br>
