--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<main></main>
 	<section>
 			<h2>ABOUT ME</h2>
-			<img src="images/profile.jpg.jpg" alt="Profile photo" class="profile-2x2">
+			<img src="images/profile.jpg" alt="Profile photo" class="profile-2x2">
 	</section>
 	<section>
 			
