--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="css/styles.css">
 	<meta charset="UTF-8">Submit</button>
 	<title>Personal Online CV</title>
 	<style>
@@ -43,16 +44,19 @@
 	
 </head>
 <body>
-<header></header>
-	<section>
+<header>
+	<section class="card">
 		<h1> Monsanto, Ivy Q.</h1>
-		<p>IT Student | WEB SYSTEMS AND TECHNOLOGIES</p>
-	<main></main>
-	<section>
+		<p class="subtitle">IT Student | WEB SYSTEMS AND TECHNOLOGIES</p>
+
+</header>
+	<main>
+	<div class="container">
+	<section class="card">
 			<h2>ABOUT ME</h2>
 			<img src="images/profile.jpg" alt="Profile photo" class="profile-2x2">
 	</section>
-	<section>
+	<section class="card">
 			
 			<p>
 			Email:
@@ -115,7 +119,7 @@
 				<td>2028</td>
 			</tr>
 			</table>
-	<section>
+	<section class="card">
 			<h2> CONTACT ME</h2>
 			<form>
 			<input type="text" placeholder="Name"><br><br>
@@ -125,8 +129,11 @@
 			</form>
 			
 		</section>
-
-	<footer></footer>
+	
+	</div>
+	</main>
+	<footer class="footer">
 		<p>&copy; 2026 Monsanto Ivy. All rights reserved.</p>
+	</footer>
 </body>
 </html>
