--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="css/styles.css">
-	<meta charset="UTF-8">Submit</button>
+	<meta charset="UTF-8">
 	<title>Personal Online CV</title>
 	<style>
 	
