--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 <header>
 	<section class="card">
-		<button id="themeToggle">Toggle Dark Mode</button> 
+		<button id="themeToggle">Switch to Dark Mode</button> 
 		<h1> Monsanto, Ivy Q.</h1>
 		<p class="subtitle">IT Student | WEB SYSTEMS AND TECHNOLOGIES</p>
 	</section>
